# customer-lifecycle-engine

./: .gitignore  README.md  pyproject.toml
customer_lifecycle/: __init__.py  actions.py  engine.py  health.py  models.py  personalize.py  rules.py  stages.py
examples/: demo.py
tests/: test_engine.py  test_health.py  test_personalize.py  test_rules.py  test_stages.py
